logs/vlib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vlib'...
Compiling './lib/python3.5/site-packages/vlib/attributes.py'...
***   File "./lib/python3.5/site-packages/vlib/attributes.py", line 173
    print 'List:', states.list
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vlib/cli.py'...
***   File "./lib/python3.5/site-packages/vlib/cli.py", line 76
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vlib/conf.py'...
***   File "./lib/python3.5/site-packages/vlib/conf.py", line 44
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vlib/datatable.py'...
***   File "./lib/python3.5/site-packages/vlib/datatable.py", line 62
    print __name__, self.tablename, "setWriteBack (%s)" % switch
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vlib/db.py'...
***   File "./lib/python3.5/site-packages/vlib/db.py", line 48
    print 'db:connect(%s)' % params
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vlib/elapsetime.py'...
***   File "./lib/python3.5/site-packages/vlib/elapsetime.py", line 74
    exec stmt in context
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/vlib/odict.py'...
***   File "./lib/python3.5/site-packages/vlib/odict.py", line 27
    print o
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vlib/shell.py'...
***   File "./lib/python3.5/site-packages/vlib/shell.py", line 31
    print "Shell.cmd: %s" % cmd
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/vlib/singleton.py'...
***   File "./lib/python3.5/site-packages/vlib/singleton.py", line 33
    print "id(s1) =", id(s1)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vlib/utils.py'...
***   File "./lib/python3.5/site-packages/vlib/utils.py", line 93
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/vlib-1.3.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
